organize the code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head> 
       <meta charset = "utf-8"> 
       <title>Seat Reservation</title> 
-      <script defer src="./index.js"></script>
+      <script type="module" src="scripts/index.js"></script>
    </head> 
   
    <body> 
