--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
       <meta charset = "utf-8"> 
       <title>Seat Reservation</title> 
       <script type="module" src="scripts/index.js"></script>
+      <link rel="stylesheet" href="style.css">
    </head> 
   
    <body> 
       <header role = "banner"> 
          <h1>Seat Reservation</h1> 
       </header> 
-   
-   
+      
+      <form>
+         <label for="name">Currently reserved seats number:</label>
+         <input type="number" id="name" name="name" required min="8" max="41">
+         <label for="name">Number of visitors</label>
+         <input type="number" id="name" name="name" required min="1" max="4">
+
+         <input type="submit" value="Submit">
+      </form>
       <footer> 
          <p>Created by Anita Máté</a></p> 
       </footer> 
